Updates scala version

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 language: scala
 
-dist: trusty
-
 scala:
-  - 2.12.6
+  - 2.12.8
 
 jdk:
-- oraclejdk8
+- openjdk8
 
 before_cache:
 - du -h -d 1 $HOME/.ivy2/
