--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
         uses: olafurpg/setup-scala@v10
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
+        working-directory: main
         with:
           ruby-version: 2.7.2
       - name: Setup yq
